<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".LuasFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:id="@+id/conslayoutluas">

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/menuluaspersegi"
                android:layout_width="175dp"
                android:layout_height="175dp"
                android:layout_marginEnd="10dp"
                android:gravity="center"
                android:background="@drawable/button_menu"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/shapepersegi" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="5dp"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:text="@string/persegi"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/menuluaspersegipanjang"
                android:layout_width="175dp"
                android:layout_height="175dp"
                android:layout_marginStart="10dp"
                android:gravity="center"
                android:background="@drawable/button_menu"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/shapepanjang" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="5dp"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:text="@string/persegi_panjang"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tableRow1">

            <LinearLayout
                android:id="@+id/menuluastrap"
                android:layout_width="175dp"
                android:layout_height="175dp"
                android:layout_marginEnd="10dp"
                android:gravity="center"
                android:background="@drawable/button_menu"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/shapetrap" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="5dp"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:text="@string/trapesium"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/menuluasjajar"
                android:layout_width="175dp"
                android:layout_height="175dp"
                android:layout_marginStart="10dp"
                android:gravity="center"
                android:background="@drawable/button_menu"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/shapejajar" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="5dp"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:text="@string/jajargenjang"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tableRow2">

            <LinearLayout
                android:id="@+id/menuluaslingkaran"
                android:layout_width="175dp"
                android:layout_height="175dp"
                android:layout_marginEnd="10dp"
                android:gravity="center"
                android:background="@drawable/button_menu"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/shapelingk" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="5dp"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:text="@string/lingkaran"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/menuluaslayang"
                android:layout_width="175dp"
                android:layout_height="175dp"
                android:layout_marginStart="10dp"
                android:gravity="center"
                android:background="@drawable/button_menu"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/shapelayang" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="5dp"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:text="@string/layang_layang"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tableRow3">

            <LinearLayout
                android:id="@+id/menuluassegitiga"
                android:layout_width="175dp"
                android:layout_height="175dp"
                android:layout_marginEnd="10dp"
                android:gravity="center"
                android:background="@drawable/button_menu"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/shapesegitiga" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="5dp"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:text="@string/segitiga"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/menuluasbelahktp"
                android:layout_width="175dp"
                android:layout_height="175dp"
                android:layout_marginStart="10dp"
                android:gravity="center"
                android:background="@drawable/button_menu"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/shapeketupat" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="5dp"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:text="@string/belah_ketupat"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </TableRow>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>